--- a/app.json
+++ b/app.json
@@ -32,7 +32,8 @@
           "backgroundColor": "#ffffff"
         }
       ],
-      "expo-router"
+      "expo-router",
+      "expo-secure-store"
     ]
   }
 }
