--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "expo-router": "~4.0.20"
+    "expo-router": "~4.0.20",
+    "expo-secure-store": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
